[package]
name = "myra-installer"
version = "0.0.0"
description = "Arduino Myra Robot Installer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
reqwest = { version = "0.11", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.5"
bytes = "1.5.0"
anyhow = "1.0"

[dependencies]
rmp-serde = "1.1.2"
thiserror = "1.0.58"
tauri = { version = "1", features = [
    "window-set-min-size",
    "window-set-fullscreen",
    "os-all",
    "path-all",
    "fs-read-file",
    "shell-sidecar",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
